<resources>
    <string name="app_name">Quiz Code</string>
    <string name="start_learning">Start learning</string>
    <string name="quizzes">Quizzes</string>
    <string name="close_app">Close app</string>
    <string name="note">Note:</string>
    <string name="choose_language">Choose language</string>
    <string name="n_lessons">{n_lessons} lessons</string>
    <string name="choose_topic">Choose a topic</string>
    <string name="correct_answer">Correct answer!</string>
    <string name="wrong_answer">Wrong answer!</string>
    <string name="summary">Summary</string>
    <string name="wrong_answer_desc">Correct answer: {answer}</string>
    <string name="correct_answer_desc">Correct answer!</string>
    <string name="next_question">Next question</string>
    <string name="java_introduction_name">Introduction to syntax</string>
    <string name="java_introduction_description">Understanding the syntax</string>
    <string name="java_comments_name">Comments</string>
    <string name="java_comments_description">How to write comments and why</string>
    <string name="java_vars_name">Variables and data types</string>
    <string name="java_vars_description">How to declare variables</string>
    <string name="java_casting_name">Type casting</string>
    <string name="java_casting_description">Assigning a value to a different type variable</string>
    <string name="java_strings_name">Strings</string>
    <string name="java_strings_description">How to store text</string>
    <string name="java_ifelse_name">If and else statements</string>
    <string name="java_ifelse_description">Logical conditions</string>
    <string name="java_switch_name">Switch statement</string>
    <string name="java_switch_description">An alternative to if-else statements</string>
    <string name="java_loops_name">Loops</string>
    <string name="java_loops_description">For, while and do-while loops</string>
    <string name="java_array_name">Arrays</string>
    <string name="java_array_description">Multiple values in a single variable</string>
    <string name="java_clob_name">Classes and objects</string>
    <string name="java_clob_description">Understanding the OOP</string>
    <string name="java_introduction_t1">Every line of code that runs in Java must be inside a <b>class</b>, which represents a single concept.\n\nThe name of the Java file must match the class name and should start with an <b>uppercase letter</b>.\nThe main method contains the first instructions of our program, you will understand the keywords before and after main later.\n\nThe <b>println method</b> takes a string as a parameter and prints it in your console. Here it is an example on how to write an "hello world" program.</string>
    <string name="java_introduction_t2">\n<b>Note</b>: The curly braces marks the beginning and the end of a block of code.\n<b>Note</b>: Each code statement must end with a semicolon.
</string>
</resources>