<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/body"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/footer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/main_learn"
            android:layout_width="335px"
            android:layout_height="185px"
            android:layout_marginEnd="8dp"

            android:layout_marginBottom="8dp"
            android:alpha="0.85"
            android:background="@drawable/blue_btn_icon"
            android:button="@android:color/transparent"
            android:drawableRight="@drawable/book"
            android:fontFamily="@font/carter_one"
            android:gravity="center|left"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:shadowColor="@color/black"
            android:shadowDx="2"
            android:shadowDy="5"
            android:shadowRadius="1.5"
            android:text="@string/start_learning"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="40px"
            app:layout_constraintBottom_toTopOf="@+id/main_closeapp"
            app:layout_constraintEnd_toStartOf="@+id/center" />

        <RadioButton
            android:id="@+id/main_quiz"
            android:layout_width="335px"
            android:layout_height="185px"

            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:alpha="0.85"
            android:background="@drawable/blue_btn_icon"
            android:button="@android:color/transparent"
            android:drawableRight="@drawable/ic_baseline_fact_check_24"
            android:fontFamily="@font/carter_one"
            android:gravity="center|left"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:shadowColor="@color/black"
            android:shadowDx="2"
            android:shadowDy="5"
            android:shadowRadius="1.5"
            android:text="@string/quizzes"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="40px"
            app:layout_constraintBottom_toTopOf="@+id/main_closeapp"
            app:layout_constraintStart_toEndOf="@+id/center" />

        <RadioButton
            android:id="@+id/main_closeapp"
            android:layout_width="335px"
            android:layout_height="185px"
            android:alpha="0.85"
            android:background="@drawable/red_button_icon"
            android:button="@android:color/transparent"
            android:drawableRight="@drawable/ic_baseline_exit_to_app_24"
            android:fontFamily="@font/carter_one"
            android:gravity="center|left"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:shadowColor="@color/black"
            android:shadowDx="2"
            android:shadowDy="5"
            android:shadowRadius="1.5"
            android:text="@string/close_app"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="40px"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/center" />

        <View
            android:id="@+id/center"
            android:layout_width="1dp"
            android:layout_height="1dp"
            app:layout_constraintBottom_toBottomOf="@+id/main_robot_gif"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/main_robot_gif"
            android:layout_width="500px"
            android:layout_height="500px"
            android:src="@drawable/robot_gif"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="150px"
        android:background="@drawable/topbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>